apps/drawio/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: homelab-drawio
  labels:
    name: homelab-drawio
