apps/drawio/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: homelab-drawio
  name: drawio
spec:
  replicas: 2
  selector:
    matchLabels:
      app: drawio
  template:
    metadata:
      labels:
        app: drawio
    spec:
      containers:
        - name: drawio
          image: jgraph/drawio:26.0.9
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 35
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 3
          securityContext:
            #readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          resources:
            limits:
              memory: "256Mi"
              cpu: "800m"
            requests:
              memory: "256Mi"
              cpu: "800m"
          ports:
            - containerPort: 8080
