apps/drawio/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: homelab-drawio
  name: drawio-service
spec:
  selector:
    app: drawio
  ports:
    - port: 5001
      targetPort: 8080
