apps/drawio/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: homelab-drawio
  name: drawio-ingress
  labels:
    name: drawio-ingress
spec:
  rules:
    - host: homelab.drawio.sb
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: drawio-service
                port:
                  number: 5001
